--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@nuxtjs/eslint-module": "^4.0.2",
+    "@nuxtjs/supabase": "^0.3.5",
     "@types/node": "^18",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
