:recycle: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,6 @@ OPENAI_API_KEY=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 SUPABASE_URL=
-SUPABASE_ANON_KEY=
+SUPABASE_KEY=
 GITHUB_ID=
 GITHUB_SECRET=
-NEXTAUTH_SECRET=
