:wrench: tests continuous integration

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,4 +33,4 @@ jobs:
                  cd /var/www/webmarks
                  git pull
                  git status
-                 pnpm generate
+                 npm run generate
