--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/eslint-module": "^4.0.2",
-    "@nuxtjs/supabase": "^0.3.5",
-    "@types/node": "^18",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-vue": "^9.11.0",
-    "node-sass": "^8.0.0",
-    "nuxt": "^3.4.1",
-    "postcss": "^8.4.22",
-    "sass": "^1.62.0",
-    "sass-loader": "^13.2.2",
-    "tailwindcss": "^3.3.1"
-  },
-  "dependencies": {
-    "@nuxtjs/tailwindcss": "^6.6.6",
-    "cheerio": "1.0.0-rc.12",
-    "openai": "^3.2.1"
-  }
+   "name": "nuxt-app",
+   "private": true,
+   "scripts": {
+      "build": "nuxt build",
+      "dev": "nuxt dev",
+      "generate": "nuxt generate",
+      "preview": "nuxt preview",
+      "postinstall": "nuxt prepare"
+   },
+   "devDependencies": {
+      "@nuxtjs/eslint-config-typescript": "^12.0.0",
+      "@nuxtjs/eslint-module": "^4.0.2",
+      "@nuxtjs/supabase": "^0.3.5",
+      "@types/node": "^18.16.3",
+      "autoprefixer": "^10.4.14",
+      "eslint": "^8.39.0",
+      "eslint-config-standard-with-typescript": "^34.0.1",
+      "eslint-plugin-tailwindcss": "^3.11.0",
+      "eslint-plugin-vue": "^9.11.0",
+      "node-sass": "^8.0.0",
+      "nuxt": "^3.4.3",
+      "postcss": "^8.4.23",
+      "sass": "^1.62.1",
+      "sass-loader": "^13.2.2",
+      "tailwindcss": "^3.3.2",
+      "vue-eslint-parser": "^9.1.1"
+   },
+   "dependencies": {
+      "@nuxtjs/tailwindcss": "^6.6.7",
+      "cheerio": "1.0.0-rc.12",
+      "openai": "^3.2.1"
+   }
 }
