♻️ Fix some icons and adds import html file feature

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
       "vue",
       "javascript",
       "typescript",
+      "javascriptreact",
+      "typescriptreact",
    ],
-   "html.format.wrapAttributes": "force-expand-multiline"
+   "html.format.wrapAttributes": "force-expand-multiline",
 }
