--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
    "private": true,
    "scripts": {
       "build": "nuxt build",
+      "deploy": "nuxt build && nuxt start",
       "dev": "nuxt dev",
       "generate": "nuxt generate",
       "preview": "nuxt preview",
