--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
    "dependencies": {
       "@nuxtjs/tailwindcss": "^6.6.7",
       "cheerio": "1.0.0-rc.12",
-      "openai": "^3.2.1"
+      "openai": "^3.2.1",
+      "short-uuid": "^4.2.2"
    }
 }
