--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
       "cheerio": "1.0.0-rc.12",
       "openai": "^3.2.1",
       "pinia": "2.0.36",
-      "short-uuid": "^4.2.2"
+      "short-uuid": "^4.2.2",
+      "tiny-emitter": "^2.1.0",
+      "vue-final-modal": "^4.4.2"
    }
 }
