♻️ Update source files

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-STAGE=PRODUCTION
 OPENAI_API_KEY=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
@@ -6,3 +5,7 @@ SUPABASE_URL=
 SUPABASE_KEY=
 GITHUB_ID=
 GITHUB_SECRET=
+NITRO_PORT=
+
+DEV_REDIRECT_URL=
+PROD_REDIRECT_URL=
