--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-   "name": "Webmarks - Save and organize your bookmarks",
-   "private": true,
-   "scripts": {
-      "build": "nuxt build",
-      "start": "nuxt start",
-      "deploy": "nuxt build && /root/.local/share/pnpm/pm2 restart webmarks",
-      "dev": "nuxt dev --port 3000",
-      "generate": "nuxt generate",
-      "preview": "nuxt preview",
-      "postinstall": "nuxt prepare"
-   },
-   "devDependencies": {
-      "@nuxtjs/eslint-config-typescript": "^12.0.0",
-      "@nuxtjs/eslint-module": "^4.1.0",
-      "@nuxtjs/supabase": "^0.3.7",
-      "@types/node": "^18.16.18",
-      "autoprefixer": "^10.4.14",
-      "dotenv": "^16.3.1",
-      "eslint": "^8.43.0",
-      "eslint-config-standard-with-typescript": "^34.0.1",
-      "eslint-plugin-tailwindcss": "^3.12.1",
-      "eslint-plugin-vue": "^9.15.0",
-      "node-sass": "^8.0.0",
-      "nuxt": "^3.5.3",
-      "postcss": "^8.4.24",
-      "sass": "^1.63.6",
-      "sass-loader": "^13.3.2",
-      "tailwindcss": "^3.3.2",
-      "vue-eslint-parser": "^9.3.1"
-   },
-   "dependencies": {
-      "@nuxtjs/tailwindcss": "^6.8.0",
-      "@pinia/nuxt": "0.4.10",
-      "@vercel/analytics": "^1.0.1",
-      "cheerio": "1.0.0-rc.12",
-      "openai": "^3.3.0",
-      "pinia": "2.0.36",
-      "short-uuid": "^4.2.2",
-      "tiny-emitter": "^2.1.0",
-      "vue-final-modal": "^4.4.2"
-   }
+  "name": "webmarks",
+  "description": "Webmarks is a bookmark manager that helps you save and organize your bookmarks in a beautiful and intuitive way.",
+  "private": true,
+  "scripts": {
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "deploy": "nuxt build && /root/.local/share/pnpm/pm2 restart webmarks",
+    "dev": "nuxt dev --port 3000",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
+  },
+  "devDependencies": {
+    "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/supabase": "^0.3.7",
+    "@types/node": "^18.16.18",
+    "autoprefixer": "^10.4.14",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.43.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-tailwindcss": "^3.12.1",
+    "eslint-plugin-vue": "^9.15.0",
+    "node-sass": "^8.0.0",
+    "nuxt": "^3.5.3",
+    "postcss": "^8.4.24",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
+    "tailwindcss": "^3.3.2",
+    "vue-eslint-parser": "^9.3.1"
+  },
+  "dependencies": {
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "@pinia/nuxt": "0.4.10",
+    "@vercel/analytics": "^1.0.1",
+    "cheerio": "1.0.0-rc.12",
+    "openai": "^3.3.0",
+    "pinia": "2.0.36",
+    "short-uuid": "^4.2.2",
+    "tiny-emitter": "^2.1.0",
+    "vue-final-modal": "^4.4.2"
+  }
 }
